<resources>
    <string name="app_name">Sevent</string>
    <string name="slogan">Share. Join. Enjoy.</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="item_title">Peduli Kesehatan</string>
    <string name="item_desc">Donor darah untuk saudara-saudara kita
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit
    </string>
    <string name="detail_location">"Bandung, 29 Okt 2016"</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_retype">Retype Password</string>

</resources>
