<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sevent.sevent.Login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bkgdark1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logo"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:textCursorDrawable="@null" />
                <TextView
                    android:id="@+id/slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:textColor="#fff"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:textCursorDrawable="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textColor="#fff"
                    android:textColorHint="#fff"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    android:backgroundTint="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textColor="#fff"
                    android:textColorHint="#fff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">
                <Button
                    android:id="@+id/login"
                    android:background="@drawable/box_rounded"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:onClick="onLogin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <TextView
                    android:textColor="#fff"
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="No account yet?"/>
                <TextView
                    android:textColor="#fff"
                    android:id="@+id/newaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    android:onClick="onNewAccount"
                    android:text="Create one"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
